force-app/main/default/objects/Taxonomy__c/fields/ABM_Code__c.field-meta.xml
<CustomField>
    <fullName>ABM_Code__c</fullName>
    <label>ABM Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>