force-app/main/default/objects/Taxonomy__c/fields/ABM_Key__c.field-meta.xml
<CustomField>
    <fullName>ABM_Key__c</fullName>
    <label>ABM Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>