force-app/main/default/objects/Taxonomy__c/fields/District_Name__c.field-meta.xml
<CustomField>
    <fullName>District_Name__c</fullName>
    <label>District Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>