force-app/main/default/objects/Taxonomy__c/fields/DRD_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>DRD_Territory_Name__c</fullName>
    <label>DRD Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>