force-app/main/default/objects/Taxonomy__c/fields/DS_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>DS_Region_Code__c</fullName>
    <label>DS Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>