force-app/main/default/objects/Taxonomy__c/fields/Internal_Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Internal_Version_Key__c</fullName>
    <description>Internal use only. Populated automatically via trigger to maintain version tracking without affecting the existing Version_Key__c field.</description>
    <label>Internal Version Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>