force-app/main/default/objects/Taxonomy__c/fields/skedulo_region_cd__c.field-meta.xml
<CustomField>
    <fullName>skedulo_region_cd__c</fullName>
    <label>SK Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>