force-app/main/default/objects/Taxonomy__c/fields/skedulo_region_key__c.field-meta.xml
<CustomField>
    <fullName>skedulo_region_key__c</fullName>
    <label>SK Region Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>