force-app/main/default/objects/Taxonomy__c/fields/skedulo_region_name__c.field-meta.xml
<CustomField>
    <fullName>skedulo_region_name__c</fullName>
    <label>SK Region Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>