force-app/main/default/objects/Taxonomy__c/fields/Supervisor_Code__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Code__c</fullName>
    <label>Supervisor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>