force-app/main/default/objects/Taxonomy__c/fields/Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Team_Code__c</fullName>
    <label>Team Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>