force-app/main/default/objects/Taxonomy__c/fields/Zip_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Name__c</fullName>
    <label>Zip Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>