force-app/main/default/objects/Taxonomy__c/recordTypes/Bio_Account_Portfolio.recordType-meta.xml
<RecordType>
    <fullName>Bio_Account_Portfolio</fullName>
    <active>true</active>
    <label>Bio Account Portfolio</label>
</RecordType>