force-app/main/default/objects/Taxonomy__c/recordTypes/Bio_Booking_Support.recordType-meta.xml
<RecordType>
    <fullName>Bio_Booking_Support</fullName>
    <active>true</active>
    <label>Bio Booking Support</label>
</RecordType>