force-app/main/default/objects/Taxonomy__c/recordTypes/Bio_Collection_BSF.recordType-meta.xml
<RecordType>
    <fullName>Bio_Collection_BSF</fullName>
    <active>true</active>
    <label>Bio Collection BSF</label>
</RecordType>