force-app/main/default/objects/Taxonomy__c/recordTypes/Bio_Recruitment_CD.recordType-meta.xml
<RecordType>
    <fullName>Bio_Recruitment_CD</fullName>
    <active>true</active>
    <label>Bio Recruitment CD</label>
</RecordType>