force-app/main/default/objects/Taxonomy__c/recordTypes/Bio_Sickle_Cell_Portfolio.recordType-meta.xml
<RecordType>
    <fullName>Bio_Sickle_Cell_Portfolio</fullName>
    <active>true</active>
    <label>Bio Sickle Cell Portfolio</label>
</RecordType>