force-app/main/default/objects/Taxonomy__c/recordTypes/National_Account_Manager_Portfolio.recordType-meta.xml
<RecordType>
    <fullName>National_Account_Manager_Portfolio</fullName>
    <active>true</active>
    <label>National Account Manager Portfolio</label>
</RecordType>