force-app/main/default/objects/Taxonomy__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Version_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>DRD_Territory_Name__c</columns>
    <columns>DRD_Territory_Code__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Taxonomy__c.Bio_Recruitment_Supervisor</value>
    </filters>
    <label>Bio Recruitment Supervisor</label>
</ListView>