force-app/main/default/objects/Taxonomy__c/listViews/Bio_Account_Portfolio.listView-meta.xml
<ListView>
    <fullName>Bio_Account_Portfolio</fullName>
    <columns>NAME</columns>
    <columns>Version_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>DS_Region_Code__c</columns>
    <columns>DS_Region_Name__c</columns>
    <columns>Team_Code__c</columns>
    <columns>Team_Name__c</columns>
    <columns>DRD_Territory_Name__c</columns>
    <columns>DRD_Territory_Code__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Taxonomy__c.Bio_Recruitment_Supervisor</value>
    </filters>
    <filters>
        <field>Version_Key__c</field>
        <operation>equals</operation>
        <value>Texas</value>
    </filters>
    <filters>
        <field>Division_Code__c</field>
        <operation>equals</operation>
        <value>BD31</value>
    </filters>
    <filters>
        <field>DS_Region_Code__c</field>
        <operation>equals</operation>
        <value>001</value>
    </filters>
    <filters>
        <field>Team_Code__c</field>
        <operation>equals</operation>
        <value>1244</value>
    </filters>
    <filters>
        <field>ABM_Code__c</field>
        <operation>equals</operation>
        <value>Binghamton ABM B</value>
    </filters>
    <label>Bio Account Portfolio</label>
</ListView>