force-app/main/default/objects/Taxonomy__c/listViews/Bio_Collection_BSF.listView-meta.xml
<ListView>
    <fullName>Bio_Collection_BSF</fullName>
    <columns>NAME</columns>
    <columns>Version_Key__c</columns>
    <columns>Type__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Division_Name__c</columns>
    <columns>DS_Region_Name__c</columns>
    <columns>District_Name__c</columns>
    <columns>Collection_Operation_Name__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>skedulo_region_name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Taxonomy__c.Bio_Collection_BSF</value>
    </filters>
    <filters>
        <field>Collection_Operation_Name__c</field>
        <operation>notEqual</operation>
        <value>Non-Collection Area</value>
    </filters>
    <label>Bio Collection BSF</label>
</ListView>