force-app/main/default/objects/Taxonomy__c/listViews/Bio_Recruitment_CD.listView-meta.xml
<ListView>
    <fullName>Bio_Recruitment_CD</fullName>
    <columns>NAME</columns>
    <columns>Version_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>DS_Region_Code__c</columns>
    <columns>DS_Region_Name__c</columns>
    <columns>Team_Code__c</columns>
    <columns>Team_Name__c</columns>
    <columns>DRD_Territory_Name__c</columns>
    <columns>DRD_Territory_Code__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Taxonomy__c.Bio_Recruitment_CD</value>
    </filters>
    <filters>
        <field>Zip_Code__c</field>
        <operation>equals</operation>
        <value>35901</value>
    </filters>
    <label>Bio Recruitment CD</label>
</ListView>