force-app/main/default/objects/Taxonomy__c/listViews/Recruitment.listView-meta.xml
<ListView>
    <fullName>Recruitment</fullName>
    <columns>NAME</columns>
    <columns>Version_Key__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>DRD_Territory_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>District_Code__c</columns>
    <columns>Division_Name__c</columns>
    <columns>DS_Region_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>District_Name__c</columns>
    <columns>Collection_Operation_Name__c</columns>
    <columns>Collection_Operation_Code__c</columns>
    <columns>Portfolio_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Recruitment</label>
</ListView>