force-app/main/default/objects/Taxonomy__c/listViews/Specific_Zip_Code.listView-meta.xml
<ListView>
    <fullName>Specific_Zip_Code</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Collection_Operation_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Division_Code__c</columns>
    <columns>Division_Name__c</columns>
    <columns>DS_Region_Code__c</columns>
    <columns>DS_Region_Name__c</columns>
    <columns>DRD_Territory_Code__c</columns>
    <columns>DRD_Territory_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zip_Code__c</field>
        <operation>equals</operation>
        <value>01331</value>
    </filters>
    <label>Specific Zip Code</label>
</ListView>